Fixed player css so long artist and track names don't overflow

--- a/airtime_mvc/public/css/embeddable-player.css
+++ b/airtime_mvc/public/css/embeddable-player.css
@@ -1,6 +1,6 @@
 .airtime_player {
     width: 270px;
-    height: 180px;
+    height: 185px;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -123,12 +123,19 @@
     display: block;
     font-size: 14px;
     color: #fff;
-    width: auto;
+    width: 170px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .now_playing span {
     display: block;
     color: #aaaaaa;
+    width: 170px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .airtime_volume {
